# attendanceServer

./: .clang-format  .gitignore  BoostServer.cpp  BoostServer.hpp  CMakeLists.txt  CentralDoublyLinkedList.hpp  DoublyLinkedCircularHashMap.hpp  LICENSE  README.md  main.cpp  perf.data  perf.data.old  server.cpp  testUniqueErase.cpp  testZigZag.cpp  testZigZagSpeed.cpp
cmake/: utf8.manifest  utf8.rc
cmake/toolchains/: win.cmake  wsl.cmake
crypto/: poly.hpp  polyTest.cpp
simd/: cpu.cpp  cpu.hpp
utils/: arith_ops.hpp  big_int.hpp  big_int_test.cpp
